--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,6 @@
 td .btn-primary {margin-right: 3px;}
 body {margin-top:50px;}
 #formulario{display:none;}
+#edicionok{display: none}
+#edicionerr{display: none}
+#imgDiente{height: 20px;width: 20px;}
