--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,3 +4,5 @@ body {margin-top:50px;}
 #edicionok{display: none}
 #edicionerr{display: none}
 #imgDiente{height: 20px;width: 20px;}
+#formularioCrear{display: none}
+
