--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,4 +5,5 @@ body {margin-top:50px;}
 #edicionerr{display: none}
 #imgDiente{height: 20px;width: 20px;}
 #formularioCrear{display: none}
+#github{margin-left: 20px;}
 
